fix issue with text alignment on screen

--- a/style.css
+++ b/style.css
@@ -88,9 +88,10 @@ input:-internal-autofill-selected {
 
 .subtext1 p {
   float: center;
-  width: 900px;
+  width: 80vw;
   line-height: 1em;
   color: rgb(255, 255, 255);
+  margin: auto;
 }
 
 @media screen and (max-width: 600px) {
